--- a/style.css
+++ b/style.css
@@ -436,3 +436,75 @@ p{
     background-position: center;
     background-attachment: fixed;
 }
+.Kannur
+{
+    background-image: url(payyambalambeach.jpg);
+    background-repeat: no-repeat;
+    background-size: cover;
+    height: 800px;
+    background-position: center;
+    background-attachment: fixed;
+}
+
+.tem
+{
+    text-align: center;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    margin-top: 5%;
+    scroll-behavior: smooth;
+}
+p{
+    margin-top: 5%;
+}
+.center {
+    margin-top: 5%;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    width: 50%;
+  }
+  .Kannur1
+{
+    background-image:url(paithalmala.jfif);
+    background-repeat: no-repeat;
+    background-size: cover;
+    height: 800px;
+    background-position: center;
+    background-attachment: fixed;
+}
+.ksrgd
+{
+    background-image: url(Bekalfort.jpg);
+    background-repeat: no-repeat;
+    background-size: cover;
+    height: 800px;
+    background-position: center;
+    background-attachment: fixed;
+}
+
+.tem
+{
+    text-align: center;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    margin-top: 5%;
+    scroll-behavior: smooth;
+}
+p{
+    margin-top: 5%;
+}
+.center {
+    margin-top: 5%;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    width: 50%;
+  }
+  .ksrgd1
+{
+    background-image:url(nileswaram.jpg);
+    background-repeat: no-repeat;
+    background-size: cover;
+    height: 800px;
+    background-position: center;
+    background-attachment: fixed;
+}
